# machine-learning

./: computeCost.m  gradientDescent.m  normalEqn.m
caffe/: CMakeLists.txt  Dockerfile  README.md  download_caffe_model.sh  main.cpp
caffe/docker/cpu/: Dockerfile
caffe/docker/gpu/: Dockerfile
